[package]
name = "rustapp"
version = "0.1.0"
edition = "2021"




# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
trunk = "0.17.5"
log = "0.4.11"
wasm-bindgen = "0.2.74"
web-sys = "0.3.66"

